# FinanceDataExplorer

./: .gitignore  README.md  main.py  pyproject.toml  weekday_spending.json
data/: operations.xls
src/: cashback.json  main.py  reports.py  services.py  utils.py  views.py  weekday_spending.json
tests/: conftest.py  test_reports.py  test_services.py  test_utils.py  test_views.py
